--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 *.la
 *.lo
 
+#
+*.map
+
 # Shared objects (inc. Windows DLLs)
 *.dll
 *.so
@@ -27,6 +30,7 @@
 *.i*86
 *.x86_64
 *.hex
+/hex
 
 # Debug files
 *.dSYM/
